Fixed A TON of syntax errors.

--- a/school/elec_302/lab_05/tex/report.tex
+++ b/school/elec_302/lab_05/tex/report.tex
@@ -26,98 +26,137 @@
 
 \section{Purpose of Experiment}
 
-In this experiment, the Prime Mover and Dynamometer modules were used to measure torque, speed, 
-power, and efficiency of a DC motor. This experiment consisted of three parts. Part 1 involved 
-only the Prime Mover module, and the basic operation of the Prime Mover was studied and the 
-friction torque generated without a load was measured. Part 2 involved the Dynamometer acting as
-a load to the Prime Mover, and the changes in torque due to the additon of the Dynamometer were 
-studied. Part 3 involved an experimental study of the Prime Mover power losses and efficiency.
+In this experiment, the Prime Mover and Dynamometer modules were used to
+measure torque, speed, power, and efficiency of a DC motor. This experiment
+consisted of three parts. Part 1 involved only the Prime Mover module, and the
+basic operation of the Prime Mover was studied and the friction torque
+generated without a load was measured. Part 2 involved the Dynamometer acting
+as a load to the Prime Mover, and the changes in torque due to the additon of
+the Dynamometer were studied. Part 3 involved an experimental study of the
+Prime Mover power losses and efficiency.
 
 \section{Procedure}
 
 \subsection{EMS Workstation Set-up}
-The main power switch and voltage control knob were verified to be OFF and fully counterclockwise,
-respectively. The voltmeter selector switch was set to position 7-N. The Low Power Inputs for the 
-Prime Mover/Dynamometer (PM/Dyno) module and the Data Acquisition Interface (DAI) were connected to the 24-V
-supply. The 24-V supply was turned on. The DAI USB was connected to the computer. On the computer,
-the file for Lab 05 was opened on the EMS application, and the metering window was set to continuous
-refresh.
+
+The main power switch and voltage control knob were verified to be OFF and
+fully counterclockwise, respectively. The voltmeter selector switch was set to
+position 7--N. The Low Power Inputs for the Prime Mover/Dynamometer (PM/Dyno)
+module and the Data Acquisition Interface (DAI) were connected to the 24-V
+supply. The 24-V supply was turned on. The DAI USB was connected to the
+computer. On the computer, the file for Lab 05 was opened in the EMS
+application, and the metering window was set to continuous refresh.
 
 \subsection{Prime Mover Operation}
-\label{part1} The cicuit represented by Figure~\ref{fig:circuit_01} was constructed. The Prime Mover
-module on the left side of the Prime Mover/Dynamometer workstation was used in Part 1. Special, smaller
-sized connection wires were used to connect the torque (T) and speed (N) terminals from the PM/Dyno module
-to the DAI module. The white ground terminal was also connected between the two modules. On the PM/Dyno 
-control switches, the Mode switch was set to Prime Mover (PM) and the Display switch was set to Speed (n).
-The main voltage supply was turned ON and the DC supply voltage was adjuted to 30-V. Both the installed analog 
-EMS voltmeter and the metering window were monitored for proper indications. The DC voltage E1, the speed n 
-indicated on the Prime Mover digital display, and the speed N indicated on the computer metering window 
-were measured and recorded. The direction of rotation of the prime mover was also recorded. These values are
-shown in Table~\ref{tab:table_01}. On the PM/Dyno module, the Display switch was set to the Torque position.
-The friction torque T_f indicated on the Prime Mover digital display and the Torque T indicated in the
-metering window were measured and recorded. These values are also shown in Table~\ref{tab:table_01}. 
-On the PM/Dyno module, the Mode switch was set to the Dyn position. After a few seconds, the Mode was set
-back to the PM position. The voltage control knob was turned fully CCW and the main power switch was set OFF.
-The polarity of the leads at the Prime Mover Input were then reversed. The main power switch was turned ON and 
-the voltage supply was adjusted to 30-V. The DC voltage E1, the speed n indicated on the Prime Mover digital 
-display, and the speed N indicated on the computer metering window were measured and recorded. The direction 
-of rotation of the prime mover was also recorded. These values are shown in Table~\ref{tab:table_01}. The voltage
-control knob was set fully CCW and the main power switch to OFF. The leads were then connected to their original
-polarity. 
 
-The power supply was set ON. On the computer application, the Data Table Applications window was 
-opened. The Prime Mover Voltage (E1), speed (N), and torque (T) were checked as the values to be recorded in the 
-table. Using the voltage control knob, the Prime Mover speed was increased in approximately 300 rpm increments
-from 0--2100 rpm. At each 300 rpm increment, the values for E1, N, and T were recorded into the Data Table. This
-data is shown in Table~\ref{tab:table_02}. The voltage control knob was set fully CCW, and the main power switch 
-set OFF. On the computer application, the Graph window was opened. The Graph window was set to obtain a plot of 
-Prime Mover Speed (N) vs. Prime Mover Voltage (E1). The graph was created and then saved. This graph is shown in
-Figure~\ref{fig:plot_01}. The graph window was then set to obtain a plot of Prime Mover friction torque (T) vs. 
-Prime Mover Speed (rpm). The graph was created and then saved. This graph is shown in Figure~\ref{fig:plot_02}.
+\label{part1} The cicuit represented by Figure~\ref{fig:circuit_01} was
+constructed. The Prime Mover module on the left side of the Prime
+Mover/Dynamometer workstation was used in Part 1. Special, smaller sized
+connection wires were used to connect the torque (T) and speed (N) terminals
+from the PM/Dyno module to the DAI module. The white ground terminal was also
+connected between the two modules. On the PM/Dyno control switches, the Mode
+switch was set to Prime Mover (PM) and the Display switch was set to Speed (n).
+The main voltage supply was turned ON and the DC supply voltage was adjuted to
+30-V. Both the installed analog EMS voltmeter and the metering window were
+monitored for proper indications. The DC voltage E1, the speed n indicated on
+the Prime Mover digital display, and the speed N indicated on the computer
+metering window were measured and recorded. The direction of rotation of the
+prime mover was also recorded. These values are shown in
+Table~\ref{tab:table_01}. On the PM/Dyno module, the Display switch was set to
+the Torque position.  The friction torque, $T_f$, indicated on the Prime Mover
+digital display and the Torque, $T$, indicated in the metering window were
+measured and recorded. These values are also shown in Table~\ref{tab:table_01}.
+On the PM/Dyno module, the Mode switch was set to the Dyn position. After a few
+seconds, the Mode was set back to the PM position. The voltage control knob was
+turned fully CCW and the main power switch was set to {OFF}.  The polarity of
+the leads at the Prime Mover Input were then reversed. The main power switch
+was turned ON and the voltage supply was adjusted to 30-V. The DC voltage E1,
+the speed n indicated on the Prime Mover digital display, and the speed N
+indicated on the computer metering window were measured and recorded. The
+direction of rotation of the prime mover was also recorded. These values are
+shown in Table~\ref{tab:table_01}. The voltage control knob was set fully CCW
+and the main power switch to {OFF}. The leads were then connected to their
+original polarity.
+
+The power supply was set to {ON}. On the computer application, the Data Table
+Applications window was opened. The Prime Mover Voltage, $E_1$, speed, $N$, and
+torque, $T$, were checked as the values to be recorded in the table. Using the
+voltage control knob, the Prime Mover speed was increased in approximately
+300-rpm increments from 0--2100-rpm. At each 300- rpm increment, the values for
+E1, N, and T were recorded into the Data Table. This data is shown in
+Table~\ref{tab:table_02}. The voltage control knob was set fully CCW, and the
+main power switch set to {OFF}. On the computer application, the Graph window
+was opened. The Graph window was set to obtain a plot of Prime Mover Speed,
+$N$, vs.  Prime Mover Voltage, $E_1$. The graph was created and then saved.
+This graph is shown in Figure~\ref{fig:plot_01}. The graph window was then set
+to obtain a plot of Prime Mover friction torque, $T$, vs. Prime Mover Speed
+(rpm). The graph was created and then saved. This graph is shown in
+Figure~\ref{fig:plot_02}.
 
 \subsection{Dynamometer Operation}
-\label{part2} A timing belt was used to couple the two modules of the PM/Dyno together. The module on the left 
-acted as the Prime Mover, and the module on the right acted as the Dynamometer. The circuit represented by 
-Figure~\ref{fig:circuit_02} was constructed. The smaller sized leads were connected to the T and N meters on the
-Dynamometer side. The 24-V supply was connected to the PM/Dyno and the DAI modules. On the Prime Mover module, 
-the Mode switch was set to Prime Mover, and the Display switch was set to Speed. On the Dynamometer module, the 
-Mode switch was set to DYN, the Display switch was set to Torque, the Load Control Mode switch was set to Man., and 
-the Load Control knob was set to Min. (fully CCW). The main power switch was set ON and the voltage control knob was
-adjusted until to Prime Mover rotated at a speed of 1500 rpm. On the Prime Mover module, the Display switch was set
-to Torque. The opposition torque was then measured and recorded. This data is shown in Table~\ref{tab:table_03}.
-The Display switch was returned to Speed. On the Dynamometer module, the Load Control knob was slowly adjusted 
-clockwise until the torque on the digital dispay indicated 2.0 Nm. The voltage control knob was then adjusted so 
-that the Prime Mover rotated at 1500 rpm. The opposition torque (T_PM) indicated by the Prime Mover digital display
-and the non-corrected output torque (T_NC) in the metering window were measured and recorded. These values are shown
-in Table~\ref{tab:table_03}. On the computer in the metering window, the torque correction function (mode C)
-for the torque meter was selected. The meter was then set to read the Prime Mover output torque corrected for
-belt friction and windage. The voltage control knob was then adjusted so that the Prime Mover rotated at 1500 rpm. 
-The corrected torque T_C was then indicated in the metering window. This value was reorded and is shown in 
-Table~\ref{tab:table_03}. The voltage supply was set fully CCW and the main power switch to OFF. 
+
+\label{part2} A timing belt was used to couple the two modules of the PM/Dyno
+together. The module on the left acted as the Prime Mover, and the module on
+the right acted as the Dynamometer. The circuit represented by
+Figure~\ref{fig:circuit_02} was constructed. The smaller sized leads were
+connected to the T and N meters on the Dynamometer side. The 24-V supply was
+connected to the PM/Dyno and the DAI modules. On the Prime Mover module, the
+Mode switch was set to Prime Mover, and the Display switch was set to Speed. On
+the Dynamometer module, the Mode switch was set to DYN, the Display switch was
+set to Torque, the Load Control Mode switch was set to Man., and the Load
+Control knob was set to Min. (fully CCW). The main power switch was set ON and
+the voltage control knob was adjusted until to Prime Mover rotated at a speed
+of 1500 rpm. On the Prime Mover module, the Display switch was set to Torque.
+The opposition torque was then measured and recorded. This data is shown in
+Table~\ref{tab:table_03}. The Display switch was returned to Speed. On the
+Dynamometer module, the Load Control knob was slowly adjusted clockwise until
+the torque on the digital dispay indicated 2.0 Nm. The voltage control knob was
+then adjusted so that the Prime Mover rotated at 1500 rpm. The opposition
+torque, $T_{PM}$, indicated by the Prime Mover digital display and the
+non-corrected output torque, $T_{NC}$, in the metering window were measured and
+recorded. These values are shown in Table~\ref{tab:table_03}. On the computer
+in the metering window, the torque correction function (mode C) for the torque
+meter was selected. The meter was then set to read the Prime Mover output
+torque corrected for belt friction and windage. The voltage control knob was
+then adjusted so that the Prime Mover rotated at 1500-rpm.  The corrected
+torque $T_C$ was then indicated in the metering window. This value was reorded
+and is shown in Table~\ref{tab:table_03}. The voltage supply was set fully CCW
+and the main power switch to OFF.
 
 \subsection{Motor Losses and Efficiency}
-\label{part3} The cicuit represented by Figure~\ref{fig:circuit_02} was kept connected on the EMS workstation.
-On the Prime Mover module, the Mode switch was set to Prime Mover, and the Display switch was set to Speed. On
-the Dynamometer module, the Mode switch was set to Dyn, the Display switch was set to Torque, the Load Control 
-Mode switch was set to Man., and the Load Control knob was set to Min. (fully CCW). On the metering window, the 
-torque correction function (mode C) for the torque meter was selected. The voltage supply knob was then adjusted 
-so that the Prime Mover rotated at 1500 rpm. On the Dynamometer module, the Load Control knob was adjusted until
-the digital display indicated 1.0 Nm. The Dynamometer speed (N) and the corrected output torque T_C from the 
-metering window were measured and recorded. These values are shown in Table~\ref{tab:table_04}. The Prime Mover
-mechanical output power P_{mech} indicated on meter P_{m}, the Prime Mover electrical input power P_{IN} indicated
-on meter PQS1, and the Prime Mover efficiency \eta indicated on meter A were measured and recorded. These values are 
-shown in Table~\ref{tab:table_05}. 
 
-On the Dynamometer module, the Load Control knob was slowly adjusted CCW until the indicated torque display read
-0 Nm. The voltage control knob was then adjusted until the Prime Mover rotated at 1500 rpm. The Data Table Application
-was opended on the computer. The Prime Mover voltage E1, current I1, electrical input power PQS1, speed N, output 
-torque T, mechanical output power P_{m}, and efficiency A were set to be recorded in the Data Table. On the Dynamometer
-module, the Load Control knob was adjusted so that the torque indicated on its digital display increased from 0 to 
-2.0 Nm in 0.2 Nm increments. For each increment value, the values to be recorded were entered into the Data Table.
-These values are shown in Table~\ref{tab:table_06}. The voltage control knob was set fully CCW and the main power
-switch to OFF. The Graph window on the computer was then opened. It was set to obtain a plot of Prime Mover 
-Efficiency (meter A) vs. Prime Mover mechanical output power (P_{m}). This graph was created and saved. It is shown
-in Figure~\ref{fig:plot_03}. The 24-V power supply was then turned OFF and the timing belt removed.
+\label{part3} The cicuit represented by Figure~\ref{fig:circuit_02} was kept
+connected on the EMS workstation.  On the Prime Mover module, the Mode switch
+was set to Prime Mover, and the Display switch was set to Speed. On the
+Dynamometer module, the Mode switch was set to Dyn, the Display switch was set
+to Torque, the Load Control Mode switch was set to Man., and the Load Control
+knob was turned fully {CCW}. On the metering window, the torque correction
+function (mode C) for the torque meter was selected. The voltage supply knob
+was then adjusted so that the Prime Mover rotated at 1500 rpm. On the
+Dynamometer module, the Load Control knob was adjusted until the digital
+display indicated 1.0 Nm. The Dynamometer speed, $N$, and the corrected output
+torque, $T_C$, from the metering window were measured and recorded. These
+values are shown in Table~\ref{tab:table_04}. The Prime Mover mechanical output
+power, $P_{mech}$, indicated on meter, $P_m$, the Prime Mover electrical input
+power, $P_{in}$, indicated on meter PQS1, and the Prime Mover efficiency,
+$\eta$, indicated on meter A were measured and recorded. These values are shown
+in Table~\ref{tab:table_05}.
+
+On the Dynamometer module, the Load Control knob was slowly adjusted CCW until
+the indicated torque display read 0-Nm. The voltage control knob was then
+adjusted until the Prime Mover rotated at 1500-rpm. The Data Table Application
+was opended on the computer. The Prime Mover voltage, $E_1$, current, $I_1$,
+electrical input power, $PQS_1$, speed, $N$, output torque, $T$, mechanical
+output power, $P_{m}$, and efficiency, $A$, were set to be recorded in the Data
+Table. On the Dynamometer module, the Load Control knob was adjusted so that
+the torque indicated on its digital display increased from 0 to 2.0 Nm in 0.2
+Nm increments. For each increment value, the values to be recorded were entered
+into the Data Table.  These values are shown in Table~\ref{tab:table_06}. The
+voltage control knob was set fully CCW and the main power switch to {OFF}. The
+Graph window on the computer was then opened. It was set to obtain a plot of
+Prime Mover efficiency vs. Prime Mover mechanical output power. This graph was
+created and saved. It is shown in Figure~\ref{fig:plot_03}. The 24-V power
+supply was then turned OFF and the timing belt removed.
 
 \section{Results}
 
@@ -187,6 +226,7 @@ in Figure~\ref{fig:plot_03}. The 24-V power supply was then turned OFF and the t
 \end{table}
 
 \subsection{Motor Losses and Efficiency}
+
 \begin{table}[H]
   \centering
   \begin{tabular}{*{2}{c}}
@@ -200,21 +240,17 @@ in Figure~\ref{fig:plot_03}. The 24-V power supply was then turned OFF and the t
 
 \begin{table}[H]
   \centering
-  \begin{tabular}{*{3}{c}}
-    $P_{mech}$ exp. W & $P_{mech}$ calc. W & Percent Deviation \\ \eta \\
+  \begin{tabular}{*{4}{c}}
+    & Measured & Calculated & Percent Deviation \\
     \hline
-    182.2 & 183.4  & 0.65  \\
-    \hline
-    \eta experiment & \eta calculated & Percent Deviation \\
-    \hline
-    75.5 & 75.45 & 0.60 \\
-    \hline
-    $P_{IN}$ exp. W & $P_{L} (power losses) = $P_{IN}$ - $P_{mech}$ & -- \\
-    \hline
-    241.5 & 59.3 \\
+    $P_{mech}$ N-m & 182.2 & 183.4  & 0.65  \\
+    $\eta$ \% & 75.5 & 75.45 & 0.60 \\
+%    $P_{in}$ exp. W & $P_{loss} = P_{in} - P_{mech}$ & --- \\
+%    \hline
+%    241.5 & 59.3 \\
   \end{tabular}
-  \caption{Measured and calculated values for mechanical power output and electrical power input;
-  measured and calculated values for Prime Mover efficiency; computed Prime Mover power losses}
+  \caption{Measured and calculated values for mechanical power output,
+    electrical power input, and Prime Mover efficiency; computed Prime Mover power losses}
   \label{tab:table_05}
 \end{table}
 
@@ -263,25 +299,25 @@ in Figure~\ref{fig:plot_03}. The 24-V power supply was then turned OFF and the t
 
 \section{Conclusions}
 In Figure~\ref{fig:plot_02}, as the Prime Mover was first starting to increase there was a large increase
-in torque in the opposite direction of motion. However, as the Prime Mover gained rotational speed, the 
+in torque in the opposite direction of motion. However, as the Prime Mover gained rotational speed, the
 opposition torque continued to increase but at a slower rate. In Figure~\ref{fig:plot_03}, as the mechanical
 output power increased, the efficiency also increased. This was because of the relationship between output
-power and input power. As the output power became closer to the value of the input power, then the efficiency 
-of the motor became closer to 1. 
+power and input power. As the output power became closer to the value of the input power, then the efficiency
+of the motor became closer to 1.
 
 In Part 2, when the Dynamometer was connected to the Prime Mover, the Prime Mover generated a larger torque
-than it generated without the Dynanometer. This was because of the added belt frition and friction torque of the 
-Dyno bearings. When the Dyno was set to genearate its own magnetic torque of 2 Nm, the Prime Mover rotational speed 
-decreased and thus its opposition torque in the opposite direction of motion increased. The non-corrected torque 
+than it generated without the Dynanometer. This was because of the added belt frition and friction torque of the
+Dyno bearings. When the Dyno was set to genearate its own magnetic torque of 2 Nm, the Prime Mover rotational speed
+decreased and thus its opposition torque in the opposite direction of motion increased. The non-corrected torque
 generated by the Prime Mover was without the loading of the Dyno taken into account. When the the corrected
-torque was generated, the Dyno loading was taken into account and thus this value represented the true torque 
-produced by the Prime Mover. The corrected torque was greater than the non-corrected torque by approximately the 
+torque was generated, the Dyno loading was taken into account and thus this value represented the true torque
+produced by the Prime Mover. The corrected torque was greater than the non-corrected torque by approximately the
 same amount that the Prime Mover generated when the Dyno had not produced its own magnetic torque.
 
-In Part 3, the current was being increased because the PM/Dyno was set up as a motor. As the torque produced 
-by the Dyno increased, the voltage produced by the Prime Mover decreased. However, the current increased as the 
-Prime Mover rotational speed decreased. The mechanical output power was less than the electrical input power. 
-Electric power was being converted to mechanical power. 
+In Part 3, the current was being increased because the PM/Dyno was set up as a motor. As the torque produced
+by the Dyno increased, the voltage produced by the Prime Mover decreased. However, the current increased as the
+Prime Mover rotational speed decreased. The mechanical output power was less than the electrical input power.
+Electric power was being converted to mechanical power.
 
 \section*{Equations}
 
